welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:2: error: illegal start of simple expression
  t=[]
    ^